k8s-manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: top-course-ingress
  namespace: top-course

spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: top-course-svc
                port:
                  number: 80
